--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "nodemon index.js"
     },
     "dependencies": {
+        "@google-cloud/storage": "^5.3.0",
         "@google-cloud/text-to-speech": "^3.1.0",
         "body-parser": "^1.19.0",
         "ejs": "^3.0.1",
