--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "express": "^4.17.1",
         "gtts": "^0.2.1",
         "gtts.js": "^1.0.1",
-        "nodemon": "^2.0.2"
+        "nodemon": "^2.0.2",
+        "stream": "0.0.2"
     }
 }
